[gd_scene load_steps=2 format=3 uid="uid://badexg85lctrq"]

[ext_resource type="Script" uid="uid://dwpddwhqy1vhu" path="res://src/combat/battlers/battler_anim.gd" id="1_j0v3v"]

[node name="BattlerAnim" type="Marker2D"]
script = ExtResource("1_j0v3v")

[node name="Pivot" type="Marker2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]

[node name="FrontAnchor" type="Marker2D" parent="."]

[node name="TopAnchor" type="Marker2D" parent="."]
